--- a/styles/style.css
+++ b/styles/style.css
@@ -2,121 +2,108 @@
 
 @font-face {
     font-family: "MainFont";
-    font-style: italic;
+    font-style: normal;
     src: url("../fonts/heading.otf");
 }
 
 @font-face {
-    font-family: "MenuFont";
-    font-style: italic;
-    src: url("../fonts/menu.ttf");
+    font-family: "Open Sans";
+    font-style: normal;
+    src: url("../fonts/OpenSans.ttf");
 }
 
 html {
-    font-size: 18px;
+    font-size: 14px;
 }
 
 body {
-    font: 1.5em "MainFont";
-    padding: 0 auto;
-    margin: 0;
+    background: rgba(31,32,33,0.98);
+    font: 1em "Open Sans";
     color: white;
 }
 
-h1 {
-    font: 6rem "MainFont";
-    color: blanchedalmond;
-    margin: 0;
-}
-
-.p {
-    text-indent: 20px;
-}
-
-a {
-    color: blanchedalmond;
-    text-decoration-color: white;
-}
-
-a:hover {
-    color: burlywood;
-    text-decoration-color: blanchedalmond;
-}
-
-hr {
-    margin: 0;
-    height: 6px;
-    border: 0;
-}
-
-.top {
-    height: 200px;
-    width: auto;
-    background: black;
-}
-
-.top p {
+.nav_bar {
+    background: rgba(24,24,24,0.98);
     position: absolute;
-    top: 100px;
-    margin: 0 10px;
-    font: 3rem "MainFont";
-    font-style: italic;
+    top: 0;
+    left: 0;
+    z-index: 3;
+    width: 90px;
+    height: 100%;
+    min-height: 500px;
+}
+
+.menu {
+    position: absolute;
+    top: 30%;
 }
 
 .menu ul {
     display: -webkit-flex;
     display: flex;
+    flex-direction: column;
     justify-items: flex-start;
-    background: white;
     list-style: none;
-    margin: 0;
+    padding: 10px;
+}
+
+.menu li {
+    margin: 10px 0 0 0;
 }
 
 .menu a {
-    font: 2rem "MenuFont";
-    color: black;
-    text-decoration: none;
-    padding: 1em;
     display: block;
 }
 
-.menu a:hover {
-    background: rgba(238,162,53,0.98);
+.container {
+    z-index: 1;
+    padding-left: 90px;
+    position: absolute;
+    height: 100%;
 }
 
-.main {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background: white;
+.text-block {
+    will-change: contents;
+    position: relative;
+    padding-left: 30px;
+    top: 30%;
 }
 
-.border {
-    size: auto;
-    color: black;
+.greetings {
+    font-size: 5rem;
+    line-height: 5rem;
 }
 
-.border img {
-    text-align: center;
+.skills {
+    font-size: 150%;
+    float: top;
+    color: rgba(158,158,158,0.98);
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    background: black;
-    color: white;
+.contact_button {
+    border: 5px solid rgba(79,239,0,0.98);
+    width: 10em;
+    height: 3em;
+    border-radius: 0.5em;
 }
 
-.article {
-    margin-left: 1em;
-    margin-right: 1em;
+.background{
+    z-index: 0;
+    overflow: hidden;
+    position: absolute;
+    width: 1920px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: auto;
+    margin: auto;
+    image-rendering: optimizeQuality;
 }
 
-.content iframe {
-    margin: 70px 0 0 30px;
+.background img{
+    width: 100%;
 }
 
-.main [href]::after{
+.container [href]::after{
     content: "⤴";
 }
