--- a/styles/style.css
+++ b/styles/style.css
@@ -68,3 +68,21 @@ body {
     padding-left: 30px;
     top: 40%;
 }
+
+.button {
+    color: #4EEA01;
+    font-size: 2em;
+    padding: 6px 15px;
+    border: 3px solid #4EEA01;
+    text-decoration: none;
+    background: transparent;
+    outline: none !important;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+}
+
+.button:hover {
+    color: black;
+    background: #4EEA01;
+}
