--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     {% block head %}
-    <meta charset="UTF-8">3
+    <meta charset="UTF-8">
     <meta name="author" content="Anton Prinzevski">
     <meta name="description" content="SEO here">
     <title>{% block title %}{% endblock %}</title>
@@ -35,6 +35,7 @@
 </body>
 <script src="../static/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="../static/node_modules/jbox/Source/jBox.min.js"></script>
+<script src="../static/scripts/menu.js"></script>
 {% block js_scripts %}
 {% endblock %}
 </html>
