--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -1,47 +1,28 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Anton Prinzevski">
-    <meta name="description" content="SEO here">
-
-    <title>Обо мне</title>
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../static/styles/info.css">
-    <script src="../static/node_modules/jquery/dist/jquery.min.js"></script>
-</head>
-<body>
-    <div class="nav_bar">
-        <div class="menu">
-            <ul>
-                <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="../static/images/menu/normal/homepage.png"></a></li>
-                <li><a id="info_link" href="info.html"><img id="info_pic" src="../static/images/menu/normal/about_me.png"></a></li>
-                <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="../static/images/menu/normal/skills.png"></a></li>
-                <li><a id="work_link" href="work.html"><img id="work_pic" src="../static/images/menu/normal/work.png"></a></li>
-                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="../static/images/menu/normal/contacts.png"></a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="container">
-        <div class="text-block">
-            <h1>Обо мне</h1>
-            <p>Я <strong>Принцевский Антон</strong>, программист на
-            <strong>python</strong> и <strong>веб-разработчик</strong>.</p>
-            <p>Я начал увлекаться разработкой простых устройств и проектированием
-                в начальных классах, а программированием - в средних. Мне
-                с самого раннего детства нравилось сочетание точных наук и творчества.
-                А программирование, по своей сути, это смесь воображения, синтаксиса языка и
-                математики. </p>
-            <p>Я начал изучать программирование с языка <b>python</b>,
-                так как <b>Pascal ABC</b>, столь распространённый среди изучающих
-                программирование в России, на данный момент не имеет практического
-                применения. С обучением мне помогал мой брат, <strong><a title="Магистр Йода"
-                href="https://vk.com/dr2866">Илья Hexenhammer</a>.</strong></p>
-        </div>
-    </div>
-    <div class="hologram">
-        <img src="../static/images/hologram/green.png">
-    </div>
-</body>
-<script src="../static/scripts/info.js"></script>
-</html>
+{% extends "base.html" %}
+{% block title %}Обо мне{% endblock %}
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" href="../static/styles/info.css">
+{% endblock %}
+{% block text_block %}
+<h1>Обо мне</h1>
+<p>Я <strong>Принцевский Антон</strong>, программист на
+    <strong>python</strong> и <strong>веб-разработчик</strong>.</p>
+<p>Я начал увлекаться разработкой простых устройств и проектированием
+    в начальных классах, а программированием - в средних. Мне
+    с самого раннего детства нравилось сочетание точных наук и творчества.
+    А программирование, по своей сути, это смесь воображения, синтаксиса языка и
+    математики. </p>
+<p>Я начал изучать программирование с языка <b>python</b>,
+    так как <b>Pascal ABC</b>, столь распространённый среди изучающих
+    программирование в России, на данный момент не имеет практического
+    применения. С обучением мне помогал мой брат,
+    <strong><a title="Магистр Йода" href="https://vk.com/dr2866">Илья Hexenhammer</a>.</strong></p>
+{% endblock %}
+{% block body %}
+{{ super() }}
+<div class="hologram">
+    <img src="../static/images/hologram/green.png">
+</div>
+{% endblock %}
+{% block js_scripts %}<script src="../static/scripts/info.js"></script>{% endblock %}
