--- a/app/templates/skills.html
+++ b/app/templates/skills.html
@@ -1,86 +1,49 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Anton Prinzevski">
-    <meta name="description" content="SEO here">
-
-    <title>Навыки</title>
-    <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../static/styles/skills.css">
-    <script src="../static/node_modules/jquery/dist/jquery.min.js"></script>
-</head>
-<body>
-    <div class="nav_bar">
-        <div class="menu">
-            <ul>
-                <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="../static/images/menu/normal/homepage.png"></a></li>
-                <li><a id="info_link" href="info.html"><img id="info_pic" src="../static/images/menu/normal/about_me.png"></a></li>
-                <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="../static/images/menu/normal/skills.png"></a></li>
-                <li><a id="work_link" href="work.html"><img id="work_pic" src="../static/images/menu/normal/work.png"></a></li>
-                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="../static/images/menu/normal/contacts.png"></a></li>
-            </ul>
-        </div>
+{% extends "base.html" %}
+{% block title %}Мои навыки{% endblock %}
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" href="../static/styles/skills.css">
+{% endblock %}
+{% block text_block %}
+<h1>Мои навыки & опыт</h1>
+<div class="info_cell">
+    <h3>Telegram боты</h3>
+    <span class="about">Реализованные напопулярной и развивающейся библиотеке
+        python-telegram-bot, выполненные мной боты являются удобными в использовании
+        и модернизации.</span>
+    <div class="button_container">
+        <a class="button" href="">Заказать</a>
+        <span class="info price">2500</span>
+        <span class="info">1-3 недели</span>
     </div>
-    <div class="container">
-        <div class="text-block">
-            <h1>Мои навыки & опыт</h1>
-            <div class="info_cell">
-                <h3>Telegram боты</h3>
-                <span class="about">Реализованные напопулярной и развивающейся библиотеке
-                    python-telegram-bot, выполненные мной боты являются удобными в использовании
-                    и модернизации.</span>
-                <div class="button_container">
-                    <a class="button" href="">Заказать</a>
-                    <span class="info price">2500</span>
-                    <span class="info">1-3 недели</span>
-                </div>
-            </div>
-            <div class="info_cell">
-                <h3>Arduino smart home</h3>
-                <span class="about">Модули умного дома, сделанные на микроконтроллере Arduino -
-                    пожалуй, наиболее просты в обслуживании и сборке. С помощью Arduino
-                    можно реализовать почти всё, что угодно, поэтому любой модуль можно будет
-                    усовершенствовать или изменить до неузнаваемости. Несмотря на то,
-                    что возможности Arduino очень обширны, а заказы я выполняю по точному
-                    описанию необходимого продукта, можно привести данные примеры:
-                </span>
-                <ul>
-                    <li>Автоматические жалюзи;</li>
-                    <li>Контроль освещения с помощью звуков или движения;</li>
-                    <li>Автоматическое выращивание растений.</li>
-                </ul>
-                <span class="about">Стоит заметить, что в отличие от безпроцессорных
-                модулей, данные имеют достаточную вычислительную мощность, для
-                выполнения нескольких задач вместо одной.</span>
-                <div class="button_container">
-                    <a class="button">Заказать</a>
-                    <span class="info price">800-... </span>
-                    <span class="info">3-... дней</span>
-                </div>
-            </div>
-            <div class="info_cell">
-                <h3>Веб-разработка</h3>
-                <span class="about">Сейчас, в конце второго десятилетия 21 века,
-                    стали очень важны сайты. Без личного сайта портфолио
-                    выглядит не таким ярким, а кампания вовсе становится невидимкой
-                    для большинства клиентов, если у неё нет представительства в интернете.
-                    <br>
-                    Так как я лишь начинающий веб-разработчик, создание сайта
-                    занимает для меня приличное количество времени. Но я компенсирую
-                    это низкой стоимостью услуги.
-                    <br>
-                    В работе я использую языки вёрстки HTML и CSS, языки
-                    программирования Javascript + JQuery и Python + Flask.
-                </span>
-                <div class="button_container">
-                    <a class="button">Заказать</a>
-                    <span class="info price">5000-... </span>
-                    <span class="info">3-5 недель</span>
-                </div>
-            </div>
-        </div>
+</div>
+<div class="info_cell">
+    <h3>Arduino smart home</h3>
+    <span class="about">Модули умного дома, сделанные на микроконтроллере Arduino -
+        пожалуй, наиболее просты в обслуживании и сборке. С помощью Arduino
+        можно реализовать почти всё, что угодно, поэтому любой модуль можно будет
+        усовершенствовать или изменить до неузнаваемости. Несмотря на то,
+        что возможности Arduino очень обширны, а заказы я выполняю по точному
+        описанию необходимого продукта, можно привести данные примеры:
+    </span>
+    <ul>
+        <li>Автоматические жалюзи;</li>
+        <li>Контроль освещения с помощью звуков или движения;</li>
+        <li>Автоматическое выращивание растений.</li>
+    </ul>
+    <span class="about">Стоит заметить, что в отличие от безпроцессорных
+        модулей, данные имеют достаточную вычислительную мощность, для
+        выполнения нескольких задач вместо одной.</span>
+    <div class="button_container">
+        <a class="button">Заказать</a>
+        <span class="info price">800-... </span>
+        <span class="info">3-... дней</span>
     </div>
-</body>
-<script src="../static/scripts/skills.js"></script>
-</html>
+    <div class="button_container">
+        <a class="button">Заказать</a>
+        <span class="info price">5000-... </span>
+        <span class="info">3-5 недель</span>
+    </div>
+</div>
+{% endblock %}
+{% block js_scripts %}<script src="../static/scripts/skills.js"></script>{% endblock %}
