Modified, but this version is idle

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,11 +15,11 @@
     <div class="nav_bar">
         <div class="menu">
             <ul>
-                <li><a id="homepage_link" href="index.html"><img id="homepage_pic" src="../static/images/menu/normal/homepage.png"></a></li>
-                <li><a id="info_link" href="info.html"><img id="info_pic" src="../static/images/menu/normal/about_me.png"></a></li>
-                <li><a id="skills_link" href="skills.html"><img id="skills_pic" src="../static/images/menu/normal/skills.png"></a></li>
-                <li><a id="work_link" href="work.html"><img id="work_pic" src="../static/images/menu/normal/work.png"></a></li>
-                <li><a id="contacts_link" href="contacts.html"><img id="contacts_pic" src="../static/images/menu/normal/contacts.png"></a></li>
+                <li><a id="homepage_link" href="{{ url_for('homepage') }}"><img id="homepage_pic" src="../static/images/menu/normal/homepage.png"></a></li>
+                <li><a id="info_link" href="{{ url_for('info_page') }}"><img id="info_pic" src="../static/images/menu/normal/about_me.png"></a></li>
+                <li><a id="skills_link" href="{{ url_for('skills_page') }}"><img id="skills_pic" src="../static/images/menu/normal/skills.png"></a></li>
+                <li><a id="work_link" href="{{ url_for('work_page') }}"><img id="work_pic" src="../static/images/menu/normal/work.png"></a></li>
+                <li><a id="contacts_link" href="{{ url_for('contacts_page') }}"><img id="contacts_pic" src="../static/images/menu/normal/contacts.png"></a></li>
             </ul>
         </div>
     </div>
