--- a/app/templates/error404.html
+++ b/app/templates/error404.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "base.html" %}
+{% block title %}Ошибка 404{% endblock %}
+{% block head %}
+{{ super() }}
+<link rel="stylesheet" href="../static/styles/index.css">
+{% endblock %}
+{% block text_block %}
+<div class="greetings">
+    <span>Ты забрёл куда-то не туда.<br>Такой страницы не существует.</span>
+</div>
+{% endblock %}
