--- a/app/static/styles/contacts.css
+++ b/app/static/styles/contacts.css
@@ -27,16 +27,31 @@ h1 {
     margin: 0;
 }
 
-input {
+input, #main {
+    display: block;
     background: #37393b;
     box-sizing: border-box;
     border: none;
-    text-align: left;
     font: 20px "Open Sans";
     color: white;
     margin: 10px 10px 0 0;
-    height: 50px;
     width: inherit;
+}
+
+input {
+    padding: 15px 20px 10px 10px;
+}
+
+#main {
+    padding: 15px 20px 10px 10px;
+    margin: 10px 10px 0 0;
+    position: relative;
+    flex-grow: 2;
+    height: inherit;
+}
+
+.row1 input, .row2 input, .submit {
+    height: 50px;
 }
 
 .row1 input {
@@ -51,13 +66,21 @@ input {
     height: 300px;
 }
 
-.row3 input {
-    flex-grow: 2;
-    height: inherit;
+.submit {
+    padding: 0;
+    color: #4EEA01;
+    font-size: 2em;
+    border: 3px solid #4EEA01;
+    background: transparent;
+    outline: none !important;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    margin-top: 30px;
+    width: 200px;
 }
 
-.submit {
-    cursor: pointer;
-    margin-top: 30px;
-    width: 20%;
+.submit:hover {
+    color: black;
+    background: #4EEA01;
 }
