--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
 <div class="skills">
     <h3><b>Python / Web development / Arduino Smart Home</b></h3>
 </div>
-<a class="button" href="contacts.html">Связаться со мной</a>
+<a class="button" href="{{ url_for('contacts_page') }}">Связаться со мной</a>
 {% endblock %}
 {% block body %}
 {{ super() }}
