--- a/app/templates/skills.html
+++ b/app/templates/skills.html
@@ -12,7 +12,7 @@
         python-telegram-bot, выполненные мной боты являются удобными в использовании
         и модернизации.</span>
     <div class="button_container">
-        <a class="button" href="">Заказать</a>
+        <a class="button" href="{{ url_for('contacts_page', type='order') }}">Заказать</a>
         <span class="info price">2500</span>
         <span class="info">1-3 недели</span>
     </div>
