--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="author" content="Anton Prinzevski">
-    <meta name="description" content="SEO here">
+    <meta name="description" content="Этот сайт сделан Антоном Принцевским. Это его портфолио, а по совместительству - первая работа с HTML, CSS, JS и PyFlask'ом.">
     <title>{% block title %}{% endblock %}</title>
     <link rel="shortcut icon" href="../static/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/node_modules/jbox/Source/jBox.css">
